Assignment_2/code/decafch.output
Terminals unused in grammar

   COMMENT
   SYN_ERR
   EOF_TOKEN
   PREC_LOW
   PREC_HIGH


State 189 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | class_decl_multi

    3 class_decl_multi: class_decl
    4                 | class_decl_multi class_decl

    5 class_decl: CLASS ID class_body
    6           | CLASS ID EXTEND ID class_body

    7 class_body: OPEN_BRACE class_body_elems CLOSE_BRACE

    8 class_body_elems: class_body_decl
    9                 | class_body_elems class_body_decl

   10 class_body_decl: field_decl
   11                | method_decl
   12                | constructor_decl

   13 field_decl: modifier var_decl

   14 modifier: /* empty */
   15         | PUBLIC
   16         | PUBLIC STATIC
   17         | PRIVATE
   18         | PRIVATE STATIC
   19         | STATIC

   20 var_decl: type variables SEMI_COLON

   21 type: INT
   22     | FLOAT
   23     | BOOLEAN
   24     | ID

   25 variables: variable
   26          | variables COMMA variable

   27 variable: ID
   28         | ID sqr_brkt_1

   29 method_decl: modifier type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   30            | modifier type ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   31            | modifier VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier VOID ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

   33 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34                 | modifier ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

   35 formals: formal_param
   36        | formals COMMA formal_param

   37 formal_param: type variable

   38 block: OPEN_BRACE stmt_mult CLOSE_BRACE
   39      | OPEN_BRACE CLOSE_BRACE

   40 stmt_mult: stmt
   41          | stmt_mult stmt

   42 stmt: SEMI_COLON
   43     | BREAK SEMI_COLON
   44     | CONTINUE SEMI_COLON
   45     | RETURN SEMI_COLON
   46     | RETURN expr SEMI_COLON
   47     | WHILE OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt
   48     | FOR OPEN_PARANTHESIS for_init SEMI_COLON for_condition SEMI_COLON for_var_update CLOSE_PARANTHESIS stmt
   49     | stmt_expr SEMI_COLON
   50     | block
   51     | var_decl
   52     | IF OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt else_part

   53 else_part: /* empty */
   54          | ELSE stmt

   55 for_init: /* empty */
   56         | stmt_expr

   57 for_condition: /* empty */
   58              | expr

   59 for_var_update: /* empty */
   60               | stmt_expr

   61 literal: int_const
   62        | float_const
   63        | string_const
   64        | NULL_TOKEN
   65        | TRUE
   66        | FALSE

   67 int_const: INT_CONST

   68 float_const: FLOAT_CONST
   69            | FLOAT_CONST_MANTISSA

   70 string_const: STRING_CONST

   71 primary: literal
   72        | THIS
   73        | SUPER
   74        | OPEN_PARANTHESIS expr CLOSE_PARANTHESIS
   75        | NEW ID OPEN_PARANTHESIS arguments_mult CLOSE_PARANTHESIS
   76        | lhs
   77        | method_invocation

   78 arguments: expr
   79          | arguments COMMA expr

   80 arguments_mult: /* empty */
   81               | arguments

   82 lhs: array_access
   83    | field_access

   84 field_access: primary DOT ID
   85             | ID

   86 array_access: primary OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET

   87 method_invocation: field_access OPEN_PARANTHESIS arguments_mult CLOSE_PARANTHESIS

   88 expr: primary
   89     | assign
   90     | new_array
   91     | expr PLUS expr
   92     | expr MINUS expr
   93     | expr MULTIPLY expr
   94     | expr DIVIDE expr
   95     | expr AND expr
   96     | expr OR expr
   97     | expr EQUAL_EQUAL expr
   98     | expr NOT_EQUAL expr
   99     | expr LESS expr
  100     | expr GREATER expr
  101     | expr LESS_EQUAL expr
  102     | expr GREATER_EQUAL expr
  103     | NOT expr
  104     | PLUS expr
  105     | MINUS expr

  106 assign: lhs EQUAL expr
  107       | lhs PLUS_PLUS
  108       | PLUS_PLUS lhs
  109       | lhs MINUS_MINUS
  110       | MINUS_MINUS lhs

  111 new_array: NEW type new_array_expr
  112          | NEW type new_array_expr sqr_brkt_1

  113 new_array_expr: OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET
  114               | new_array_expr OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET

  115 sqr_brkt_1: OPEN_SQR_BRACKET CLOSE_SQR_BRACKET
  116           | sqr_brkt_1 OPEN_SQR_BRACKET CLOSE_SQR_BRACKET

  117 stmt_expr: assign
  118          | method_invocation


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_CONST (258) 67
FLOAT_CONST (259) 68
STRING_CONST (260) 70
FLOAT_CONST_MANTISSA (261) 69
ID (262) 5 6 24 27 28 29 30 31 32 33 34 75 84 85
COMMENT (263)
SYN_ERR (264)
INT (265) 21
FLOAT (266) 22
IF (267) 52
ELSE (268) 54
WHILE (269) 47
FOR (270) 48
RETURN (271) 45 46
BREAK (272) 43
CONTINUE (273) 44
NULL_TOKEN (274) 64
TRUE (275) 65
FALSE (276) 66
THIS (277) 72
SUPER (278) 73
NEW (279) 75 111 112
CLASS (280) 5 6
EXTEND (281) 6
OPEN_BRACE (282) 7 38 39
CLOSE_BRACE (283) 7 38 39
SEMI_COLON (284) 20 42 43 44 45 46 48 49
STATIC (285) 16 18 19
PUBLIC (286) 15 16
PRIVATE (287) 17 18
BOOLEAN (288) 23
COMMA (289) 26 36 79
DOT (290) 84
OPEN_PARANTHESIS (291) 29 30 31 32 33 34 47 48 52 74 75 87
CLOSE_PARANTHESIS (292) 29 30 31 32 33 34 47 48 52 74 75 87
OPEN_SQR_BRACKET (293) 86 113 114 115 116
CLOSE_SQR_BRACKET (294) 86 113 114 115 116
VOID (295) 31 32
PLUS (296) 91 104
PLUS_PLUS (297) 107 108
MINUS (298) 92 105
MINUS_MINUS (299) 109 110
MULTIPLY (300) 93
DIVIDE (301) 94
NOT_EQUAL (302) 98
NOT (303) 103
OR (304) 96
AND (305) 95
EQUAL_EQUAL (306) 97
EQUAL (307) 106
LESS_EQUAL (308) 101
LESS (309) 99
GREATER_EQUAL (310) 102
GREATER (311) 100
EOF_TOKEN (312)
UPLUS (313)
UMINUS (314)
PREC_LOW (315)
PREC_HIGH (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1 2, on right: 0
class_decl_multi (64)
    on left: 3 4, on right: 2 4
class_decl (65)
    on left: 5 6, on right: 3 4
class_body (66)
    on left: 7, on right: 5 6
class_body_elems (67)
    on left: 8 9, on right: 7 9
class_body_decl (68)
    on left: 10 11 12, on right: 8 9
field_decl (69)
    on left: 13, on right: 10
modifier (70)
    on left: 14 15 16 17 18 19, on right: 13 29 30 31 32 33 34
var_decl (71)
    on left: 20, on right: 13 51
type (72)
    on left: 21 22 23 24, on right: 20 29 30 37 111 112
variables (73)
    on left: 25 26, on right: 20 26
variable (74)
    on left: 27 28, on right: 25 26 37
method_decl (75)
    on left: 29 30 31 32, on right: 11
constructor_decl (76)
    on left: 33 34, on right: 12
formals (77)
    on left: 35 36, on right: 30 32 34 36
formal_param (78)
    on left: 37, on right: 35 36
block (79)
    on left: 38 39, on right: 29 30 31 32 33 34 50
stmt_mult (80)
    on left: 40 41, on right: 38 41
stmt (81)
    on left: 42 43 44 45 46 47 48 49 50 51 52, on right: 40 41 47 48
    52 54
else_part (82)
    on left: 53 54, on right: 52
for_init (83)
    on left: 55 56, on right: 48
for_condition (84)
    on left: 57 58, on right: 48
for_var_update (85)
    on left: 59 60, on right: 48
literal (86)
    on left: 61 62 63 64 65 66, on right: 71
int_const (87)
    on left: 67, on right: 61
float_const (88)
    on left: 68 69, on right: 62
string_const (89)
    on left: 70, on right: 63
primary (90)
    on left: 71 72 73 74 75 76 77, on right: 84 86 88
arguments (91)
    on left: 78 79, on right: 79 81
arguments_mult (92)
    on left: 80 81, on right: 75 87
lhs (93)
    on left: 82 83, on right: 76 106 107 108 109 110
field_access (94)
    on left: 84 85, on right: 83 87
array_access (95)
    on left: 86, on right: 82
method_invocation (96)
    on left: 87, on right: 77 118
expr (97)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105, on right: 46 47 52 58 74 78 79 86 91 92 93 94 95 96 97 98
    99 100 101 102 103 104 105 106 113 114
assign (98)
    on left: 106 107 108 109 110, on right: 89 117
new_array (99)
    on left: 111 112, on right: 90
new_array_expr (100)
    on left: 113 114, on right: 111 112 114
sqr_brkt_1 (101)
    on left: 115 116, on right: 28 112 116
stmt_expr (102)
    on left: 117 118, on right: 49 56 60


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program           go to state 2
    class_decl_multi  go to state 3
    class_decl        go to state 4


state 1

    5 class_decl: CLASS . ID class_body
    6           | CLASS . ID EXTEND ID class_body

    ID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    2 program: class_decl_multi .
    4 class_decl_multi: class_decl_multi . class_decl

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (program)

    class_decl  go to state 7


state 4

    3 class_decl_multi: class_decl .

    $default  reduce using rule 3 (class_decl_multi)


state 5

    5 class_decl: CLASS ID . class_body
    6           | CLASS ID . EXTEND ID class_body

    EXTEND      shift, and go to state 8
    OPEN_BRACE  shift, and go to state 9

    class_body  go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    4 class_decl_multi: class_decl_multi class_decl .

    $default  reduce using rule 4 (class_decl_multi)


state 8

    6 class_decl: CLASS ID EXTEND . ID class_body

    ID  shift, and go to state 11


state 9

    7 class_body: OPEN_BRACE . class_body_elems CLOSE_BRACE

    STATIC   shift, and go to state 12
    PUBLIC   shift, and go to state 13
    PRIVATE  shift, and go to state 14

    $default  reduce using rule 14 (modifier)

    class_body_elems  go to state 15
    class_body_decl   go to state 16
    field_decl        go to state 17
    modifier          go to state 18
    method_decl       go to state 19
    constructor_decl  go to state 20


state 10

    5 class_decl: CLASS ID class_body .

    $default  reduce using rule 5 (class_decl)


state 11

    6 class_decl: CLASS ID EXTEND ID . class_body

    OPEN_BRACE  shift, and go to state 9

    class_body  go to state 21


state 12

   19 modifier: STATIC .

    $default  reduce using rule 19 (modifier)


state 13

   15 modifier: PUBLIC .
   16         | PUBLIC . STATIC

    STATIC  shift, and go to state 22

    $default  reduce using rule 15 (modifier)


state 14

   17 modifier: PRIVATE .
   18         | PRIVATE . STATIC

    STATIC  shift, and go to state 23

    $default  reduce using rule 17 (modifier)


state 15

    7 class_body: OPEN_BRACE class_body_elems . CLOSE_BRACE
    9 class_body_elems: class_body_elems . class_body_decl

    CLOSE_BRACE  shift, and go to state 24
    STATIC       shift, and go to state 12
    PUBLIC       shift, and go to state 13
    PRIVATE      shift, and go to state 14

    $default  reduce using rule 14 (modifier)

    class_body_decl   go to state 25
    field_decl        go to state 17
    modifier          go to state 18
    method_decl       go to state 19
    constructor_decl  go to state 20


state 16

    8 class_body_elems: class_body_decl .

    $default  reduce using rule 8 (class_body_elems)


state 17

   10 class_body_decl: field_decl .

    $default  reduce using rule 10 (class_body_decl)


state 18

   13 field_decl: modifier . var_decl
   29 method_decl: modifier . type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   30            | modifier . type ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   31            | modifier . VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier . VOID ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   33 constructor_decl: modifier . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34                 | modifier . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID       shift, and go to state 26
    INT      shift, and go to state 27
    FLOAT    shift, and go to state 28
    BOOLEAN  shift, and go to state 29
    VOID     shift, and go to state 30

    var_decl  go to state 31
    type      go to state 32


state 19

   11 class_body_decl: method_decl .

    $default  reduce using rule 11 (class_body_decl)


state 20

   12 class_body_decl: constructor_decl .

    $default  reduce using rule 12 (class_body_decl)


state 21

    6 class_decl: CLASS ID EXTEND ID class_body .

    $default  reduce using rule 6 (class_decl)


state 22

   16 modifier: PUBLIC STATIC .

    $default  reduce using rule 16 (modifier)


state 23

   18 modifier: PRIVATE STATIC .

    $default  reduce using rule 18 (modifier)


state 24

    7 class_body: OPEN_BRACE class_body_elems CLOSE_BRACE .

    $default  reduce using rule 7 (class_body)


state 25

    9 class_body_elems: class_body_elems class_body_decl .

    $default  reduce using rule 9 (class_body_elems)


state 26

   24 type: ID .
   33 constructor_decl: modifier ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34                 | modifier ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 33

    $default  reduce using rule 24 (type)


state 27

   21 type: INT .

    $default  reduce using rule 21 (type)


state 28

   22 type: FLOAT .

    $default  reduce using rule 22 (type)


state 29

   23 type: BOOLEAN .

    $default  reduce using rule 23 (type)


state 30

   31 method_decl: modifier VOID . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier VOID . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID  shift, and go to state 34


state 31

   13 field_decl: modifier var_decl .

    $default  reduce using rule 13 (field_decl)


state 32

   20 var_decl: type . variables SEMI_COLON
   29 method_decl: modifier type . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   30            | modifier type . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID  shift, and go to state 35

    variables  go to state 36
    variable   go to state 37


state 33

   33 constructor_decl: modifier ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   34                 | modifier ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 38
    INT                shift, and go to state 27
    FLOAT              shift, and go to state 28
    BOOLEAN            shift, and go to state 29
    CLOSE_PARANTHESIS  shift, and go to state 39

    type          go to state 40
    formals       go to state 41
    formal_param  go to state 42


state 34

   31 method_decl: modifier VOID ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier VOID ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 43


state 35

   27 variable: ID .
   28         | ID . sqr_brkt_1
   29 method_decl: modifier type ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   30            | modifier type ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 44
    OPEN_SQR_BRACKET  shift, and go to state 45

    $default  reduce using rule 27 (variable)

    sqr_brkt_1  go to state 46


state 36

   20 var_decl: type variables . SEMI_COLON
   26 variables: variables . COMMA variable

    SEMI_COLON  shift, and go to state 47
    COMMA       shift, and go to state 48


state 37

   25 variables: variable .

    $default  reduce using rule 25 (variables)


state 38

   24 type: ID .

    $default  reduce using rule 24 (type)


state 39

   33 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 50


state 40

   37 formal_param: type . variable

    ID  shift, and go to state 51

    variable  go to state 52


state 41

   34 constructor_decl: modifier ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   36 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 54


state 42

   35 formals: formal_param .

    $default  reduce using rule 35 (formals)


state 43

   31 method_decl: modifier VOID ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   32            | modifier VOID ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 38
    INT                shift, and go to state 27
    FLOAT              shift, and go to state 28
    BOOLEAN            shift, and go to state 29
    CLOSE_PARANTHESIS  shift, and go to state 55

    type          go to state 40
    formals       go to state 56
    formal_param  go to state 42


state 44

   29 method_decl: modifier type ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   30            | modifier type ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 38
    INT                shift, and go to state 27
    FLOAT              shift, and go to state 28
    BOOLEAN            shift, and go to state 29
    CLOSE_PARANTHESIS  shift, and go to state 57

    type          go to state 40
    formals       go to state 58
    formal_param  go to state 42


state 45

  115 sqr_brkt_1: OPEN_SQR_BRACKET . CLOSE_SQR_BRACKET

    CLOSE_SQR_BRACKET  shift, and go to state 59


state 46

   28 variable: ID sqr_brkt_1 .
  116 sqr_brkt_1: sqr_brkt_1 . OPEN_SQR_BRACKET CLOSE_SQR_BRACKET

    OPEN_SQR_BRACKET  shift, and go to state 60

    $default  reduce using rule 28 (variable)


state 47

   20 var_decl: type variables SEMI_COLON .

    $default  reduce using rule 20 (var_decl)


state 48

   26 variables: variables COMMA . variable

    ID  shift, and go to state 51

    variable  go to state 61


state 49

   38 block: OPEN_BRACE . stmt_mult CLOSE_BRACE
   39      | OPEN_BRACE . CLOSE_BRACE

    INT_CONST             shift, and go to state 62
    FLOAT_CONST           shift, and go to state 63
    STRING_CONST          shift, and go to state 64
    FLOAT_CONST_MANTISSA  shift, and go to state 65
    ID                    shift, and go to state 66
    INT                   shift, and go to state 27
    FLOAT                 shift, and go to state 28
    IF                    shift, and go to state 67
    WHILE                 shift, and go to state 68
    FOR                   shift, and go to state 69
    RETURN                shift, and go to state 70
    BREAK                 shift, and go to state 71
    CONTINUE              shift, and go to state 72
    NULL_TOKEN            shift, and go to state 73
    TRUE                  shift, and go to state 74
    FALSE                 shift, and go to state 75
    THIS                  shift, and go to state 76
    SUPER                 shift, and go to state 77
    NEW                   shift, and go to state 78
    OPEN_BRACE            shift, and go to state 49
    CLOSE_BRACE           shift, and go to state 79
    SEMI_COLON            shift, and go to state 80
    BOOLEAN               shift, and go to state 29
    OPEN_PARANTHESIS      shift, and go to state 81
    PLUS_PLUS             shift, and go to state 82
    MINUS_MINUS           shift, and go to state 83

    var_decl           go to state 84
    type               go to state 85
    block              go to state 86
    stmt_mult          go to state 87
    stmt               go to state 88
    literal            go to state 89
    int_const          go to state 90
    float_const        go to state 91
    string_const       go to state 92
    primary            go to state 93
    lhs                go to state 94
    field_access       go to state 95
    array_access       go to state 96
    method_invocation  go to state 97
    assign             go to state 98
    stmt_expr          go to state 99


state 50

   33 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block .

    $default  reduce using rule 33 (constructor_decl)


state 51

   27 variable: ID .
   28         | ID . sqr_brkt_1

    OPEN_SQR_BRACKET  shift, and go to state 45

    $default  reduce using rule 27 (variable)

    sqr_brkt_1  go to state 46


state 52

   37 formal_param: type variable .

    $default  reduce using rule 37 (formal_param)


state 53

   36 formals: formals COMMA . formal_param

    ID       shift, and go to state 38
    INT      shift, and go to state 27
    FLOAT    shift, and go to state 28
    BOOLEAN  shift, and go to state 29

    type          go to state 40
    formal_param  go to state 100


state 54

   34 constructor_decl: modifier ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 101


state 55

   31 method_decl: modifier VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 102


state 56

   32 method_decl: modifier VOID ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   36 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 103


state 57

   29 method_decl: modifier type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 104


state 58

   30 method_decl: modifier type ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   36 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 105


state 59

  115 sqr_brkt_1: OPEN_SQR_BRACKET CLOSE_SQR_BRACKET .

    $default  reduce using rule 115 (sqr_brkt_1)


state 60

  116 sqr_brkt_1: sqr_brkt_1 OPEN_SQR_BRACKET . CLOSE_SQR_BRACKET

    CLOSE_SQR_BRACKET  shift, and go to state 106


state 61

   26 variables: variables COMMA variable .

    $default  reduce using rule 26 (variables)


state 62

   67 int_const: INT_CONST .

    $default  reduce using rule 67 (int_const)


state 63

   68 float_const: FLOAT_CONST .

    $default  reduce using rule 68 (float_const)


state 64

   70 string_const: STRING_CONST .

    $default  reduce using rule 70 (string_const)


state 65

   69 float_const: FLOAT_CONST_MANTISSA .

    $default  reduce using rule 69 (float_const)


state 66

   24 type: ID .
   85 field_access: ID .

    ID        reduce using rule 24 (type)
    $default  reduce using rule 85 (field_access)


state 67

   52 stmt: IF . OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt else_part

    OPEN_PARANTHESIS  shift, and go to state 107


state 68

   47 stmt: WHILE . OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt

    OPEN_PARANTHESIS  shift, and go to state 108


state 69

   48 stmt: FOR . OPEN_PARANTHESIS for_init SEMI_COLON for_condition SEMI_COLON for_var_update CLOSE_PARANTHESIS stmt

    OPEN_PARANTHESIS  shift, and go to state 109


state 70

   45 stmt: RETURN . SEMI_COLON
   46     | RETURN . expr SEMI_COLON

    INT_CONST             shift, and go to state 62
    FLOAT_CONST           shift, and go to state 63
    STRING_CONST          shift, and go to state 64
    FLOAT_CONST_MANTISSA  shift, and go to state 65
    ID                    shift, and go to state 110
    NULL_TOKEN            shift, and go to state 73
    TRUE                  shift, and go to state 74
    FALSE                 shift, and go to state 75
    THIS                  shift, and go to state 76
    SUPER                 shift, and go to state 77
    NEW                   shift, and go to state 111
    SEMI_COLON            shift, and go to state 112
    OPEN_PARANTHESIS      shift, and go to state 81
    PLUS                  shift, and go to state 113
    PLUS_PLUS             shift, and go to state 82
    MINUS                 shift, and go to state 114
    MINUS_MINUS           shift, and go to state 83
    NOT                   shift, and go to state 115
